--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,17 +1,21 @@
-<header class="flex justify-between items-center px-24 py-12 max-sm:px-5 max-sm:py-10 max-x-7xl w-full mx-auto">
+<header
+  class="px-24 py-8 max-sm:px-5 max-sm:py-6 max-x-7xl w-full mx-auto"
+>
+  <div class="bg-white flex justify-between items-center">
     <a href="/" class="flex items-center gap-x-4">
-        <img 
+      <img
         src="/main-logo.png"
         alt="logo igeegi"
         width={120}
         height={120}
         class="rounded-2xl aspect-thumbnail object-cover"
-        />
-        <p class="uppercase text-3xl text-zinc-900">Portfolio</p>
+      />
+      <p class="uppercase text-3xl hidden lg:flex">Portfolio</p>
     </a>
     <ul class="flex gap-x-8">
-        <li><a href="/" class="text-teal-900 font-bold">Home</a></li>
-        <li><a href="about" class="text-teal-900 font-bold">About</a></li>
-        <li><a href="/blog" class="text-teal-900 font-bold">Blog</a></li>
+      <li><a href="/" class="font-bold">Home</a></li>
+      <li><a href="about" class="font-bold">Works</a></li>
+      <li><a href="/blog" class="font-bold">About</a></li>
     </ul>
+  </div>
 </header>
