--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,28 +1,36 @@
 ---
-import Header from '../components/Header.astro';
+import Header from "../components/Header.astro";
 
 interface Props {
-	title: string;
-	description: string;
-	image?: string;
+  title: string;
+  description: string;
+  image?: string;
 }
 
-const { title, description, image = "/images/Logo Yellow igeegi.svg" } = Astro.props;
+const {
+  title,
+  description,
+  image = "/images/Logo Yellow igeegi.svg",
+} = Astro.props;
 ---
 
 <!doctype html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="description" content={description} />
-		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="/logo-yellow.png" />
-		<meta name="generator" content={Astro.generator} />
-		<meta property="og:image" content={image}/>
-		<title>{title}</title>
-	</head>
-	<body class="min-h-screen">
-		<Header/>
-		<slot />
-	</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="description" content={description} />
+    <meta name="viewport" content="width=device-width" />
+    <link rel="icon" type="image/svg+xml" href="/logo-yellow.png" />
+    <meta name="generator" content={Astro.generator} />
+    <meta property="og:image" content={image} />
+    <link rel="stylesheet" href="src/styles/global.css" />
+	<link href="https://dev.iconly.io/public/SxpQFETPIo42/iconly.css" rel="stylesheet"/>
+    <title>{title}</title>
+  </head>
+  <body class="min-h-screen">
+    <Header />
+    <div class="px-24">
+      <slot />
+    </div>
+  </body>
 </html>
