--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -10,12 +10,11 @@
         height={120}
         class="rounded-2xl aspect-thumbnail object-cover"
       />
-      <p class="uppercase text-3xl hidden lg:flex">Portfolio</p>
     </a>
     <ul class="hidden sm:flex gap-x-8">
       <li><a href="/" class="font-bold">Home</a></li>
       <li><a href="about" class="font-bold">Works</a></li>
-      <li><a href="/blog" class="font-bold">About</a></li>
+      <!-- <li><a href="/blog" class="font-bold">About</a></li> -->
     </ul>
   </div>
 </header>
